--- a/package.json
+++ b/package.json
@@ -4,9 +4,41 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "nodemon src/server.js"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/data/",
+      "logs/",
+      "node_modules/"
+    ]
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "amazon-sp-api": "^0.7.7",
+    "aws-sdk": "^2.1159.0",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
+    "dateformat": "^3.0.3",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "find-remove": "^4.0.4",
+    "fs": "0.0.1-security",
+    "fs.promises": "^0.1.2",
+    "glob": "^8.0.3",
+    "log4js": "^6.5.2",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
+    "mysql2": "^2.3.3",
+    "readline": "^1.3.0",
+    "zip-a-folder": "^1.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
